fix contrast issue on the childrens timetable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,3 +489,7 @@ span i {
     font-weight: 500 !important;
     color: #222 !important;
 }
+
+.children-header {
+    color:#011627;
+}
